cleanup, refactor, add steps list for transpiling

--- a/pennylane_snowflurry/jupyter/efficiency_comparison.ipynb
+++ b/pennylane_snowflurry/jupyter/efficiency_comparison.ipynb
@@ -17,12 +17,10 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pennylane as qml\n",
-    "from pennylane_snowflurry.graphing.plotting_utils import graph\n",
+    "from pennylane_snowflurry.utility.plotting_utils import graph\n",
     "from pennylane_snowflurry.utility.debug_utility import SnowflurryUtility, arbitrary_circuit\n",
     "from pennylane_snowflurry.transpiler.monarq_transpile import Transpiler\n",
-    "from dotenv import dotenv_values\n",
-    "from pennylane_snowflurry.device_configuration import MonarqConfig\n",
-    "import pennylane_snowflurry.transpiler.transpiler_enums as enums"
+    "from pennylane_snowflurry.transpiler.transpiler_config import MonarqDefaultConfig"
    ]
   },
   {
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +80,7 @@
     "    qnode = qml.QNode(lambda: circuit(i), dev)\n",
     "    qnode()\n",
     "    sf_tape = transpile_snowflurry(qnode.tape)\n",
-    "    cq_tape = transpile_calculqc(qnode.tape, MonarqConfig(useBenchmark=enums.Benchmark.NONE))\n",
+    "    cq_tape = transpile_calculqc(qnode.tape, MonarqDefaultConfig(use_benchmark=False))\n",
     "\n",
     "    sf_node = qml.QNode(lambda : arbitrary_circuit(sf_tape, qml.counts), dev)\n",
     "    cq_node = qml.QNode(lambda : arbitrary_circuit(cq_tape, qml.counts), dev)\n",
