--- a/pennylane_snowflurry/jupyter/fidelity_comparison.ipynb
+++ b/pennylane_snowflurry/jupyter/fidelity_comparison.ipynb
@@ -11,9 +11,8 @@
     "import pennylane as qml\n",
     "from pennylane_snowflurry.utility.debug_utility import SnowflurryUtility, arbitrary_circuit, get_labels\n",
     "from pennylane_snowflurry.transpiler.monarq_transpile import Transpiler\n",
-    "from pennylane_snowflurry.device_configuration import MonarqConfig\n",
-    "import pennylane_snowflurry.transpiler.transpiler_enums as enums\n",
-    "from pennylane_snowflurry.noisy_device import NoisyDevice"
+    "from pennylane_snowflurry.transpiler.transpiler_config import MonarqDefaultConfig\n",
+    "from pennylane_snowflurry.utility.noisy_device import NoisyDevice"
    ]
   },
   {
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +66,7 @@
     "qnode = qml.QNode(lambda: circuit(4), dev)\n",
     "qnode()\n",
     "sf_tape = transpile_snowflurry(qnode.tape)\n",
-    "cq_tape = transpile_calculqc(qnode.tape, MonarqConfig(useBenchmark=enums.Benchmark.NONE))\n",
+    "cq_tape = transpile_calculqc(qnode.tape, MonarqDefaultConfig(useBenchmark=False))\n",
     "\n",
     "sf_node = qml.QNode(lambda : arbitrary_circuit(sf_tape, qml.counts), dev)\n",
     "cq_node = qml.QNode(lambda : arbitrary_circuit(cq_tape, qml.counts), dev)\n",
