ajout de documentation sur mitigation d'erreurs

--- a/doc/transpiler.ipynb
+++ b/doc/transpiler.ipynb
@@ -6,19 +6,178 @@
    "source": [
     "## MonarQ's transpiler\n",
     "\n",
-    "MonarQ's transpiler is typically used behind the scene when you use the \"monarq.default\" device, but you can also use it in a standalone manner if need be. "
+    "MonarQ's transpiler is typically used behind the scene when you use the \"monarq.default\" device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pennylane_snowflurry.API.api_client import MonarqClient\n",
+    "from pennylane_snowflurry.transpiler.transpiler_config import MonarqDefaultConfig\n",
+    "from pennylane_snowflurry.transpiler.steps.placement import ISMAGS\n",
+    "import pennylane as qml\n",
+    "from dotenv import dotenv_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = dotenv_values(\".env\")\n",
+    "client = MonarqClient(conf[\"HOST\"], conf[\"USER\"], conf[\"ACCESS_TOKEN\"])\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client=client)\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def circuit():\n",
+    "    qml.Hadamard(0)\n",
+    "    qml.CNOT([0, 1])\n",
+    "    qml.CNOT([1, 2])\n",
+    "    return qml.counts(wires=[0, 1, 2])\n",
+    "\n",
+    "results = circuit()\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The usual behaviour of the transpiler is the following : \n",
+    "1. decompose the circuit to the clifford + T gate set\n",
+    "2. map the circuit to the machine's topology using a pathfinding heuristic\n",
+    "3. route the unconnected 2 qubit gates using swaps\n",
+    "4. optimize by decomposing iteratively to RX, RZ and CZ, commuting, merging and cancelling inverses and trivial gates\n",
+    "5. decomposing to MonarQ's native gate set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to change the behaviour of the transpiler by changing steps, or adding new ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_config = MonarqDefaultConfig() # this is the usual behaviour\n",
+    "\n",
+    "ismags_placement = ISMAGS() # this is an alternative placement method that uses subgraph isomorphism\n",
+    "\n",
+    "my_config.steps[1] = ismags_placement # the placement step is 2nd. change it for the new one\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client=client, behaviour_config=my_config) # set the config explicitely"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All steps that are played by default are **preprocessing** steps, but you can also add **postprocessing** steps, that act on the results instead of the circuit.\n",
+    "\n",
+    "The steps will be filtered according to their type automatically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pennylane_snowflurry.transpiler.steps.readout_error_mitigation import ReadoutErrorMitigation\n",
+    "\n",
+    "readout_error_mitigation = ReadoutErrorMitigation()\n",
+    "\n",
+    "my_config.steps.append(readout_error_mitigation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can create new preprocessing / postprocessing steps by overriding the PreProcessing / PostProcessing classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# abstract steps + empty config\n",
+    "from pennylane_snowflurry.transpiler.steps.interfaces.pre_processing import PreProcStep\n",
+    "from pennylane_snowflurry.transpiler.steps.interfaces.post_processing import PostProcStep\n",
+    "from pennylane_snowflurry.transpiler.transpiler_config import TranspilerConfig\n",
+    "\n",
+    "# default steps\n",
+    "from pennylane_snowflurry.transpiler.steps.base_decomposition import CliffordTDecomposition\n",
+    "from pennylane_snowflurry.transpiler.steps.placement import ASTAR\n",
+    "from pennylane_snowflurry.transpiler.steps.routing import Swaps\n",
+    "from pennylane_snowflurry.transpiler.steps.optimization import IterativeCommuteAndMerge\n",
+    "from pennylane_snowflurry.transpiler.steps.native_decomposition import MonarqDecomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# toy preprocessing step for printing the circuit\n",
+    "class PrintCircuit(PreProcStep):\n",
+    "    def execute(self, tape):\n",
+    "        print([op.name for op in tape.operations])\n",
+    "        \n",
+    "# toy postprocessing step for printing the results\n",
+    "class PrintResults(PostProcStep):\n",
+    "    def execute(self, tape, results):\n",
+    "        print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this custom config will print the circuit, transpile, print the transpiled circuit \n",
+    "# and then print the unmitigated results, followed by the mitigated results.\n",
+    "my_config = TranspilerConfig(PrintCircuit(),\n",
+    "                             CliffordTDecomposition(), \n",
+    "                             ASTAR(),\n",
+    "                             Swaps(),\n",
+    "                             IterativeCommuteAndMerge(),\n",
+    "                             MonarqDecomposition(), \n",
+    "                             PrintCircuit(),\n",
+    "                             PrintResults(),\n",
+    "                             ReadoutErrorMitigation(), \n",
+    "                             PrintResults())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also use the transpiler in a standalone manner if need be. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pennylane_snowflurry.transpiler.monarq_transpile import Transpiler\n",
-    "from pennylane_snowflurry.transpiler.transpiler_config import MonarqDefaultConfig\n",
-    "from pennylane.tape import QuantumTape\n",
-    "import pennylane as qml"
+    "from pennylane.tape import QuantumTape"
    ]
   },
   {
