--- a/pennylane_snowflurry/jupyter/qiskit_vs_monarq_device.ipynb
+++ b/pennylane_snowflurry/jupyter/qiskit_vs_monarq_device.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,17 +39,7 @@
     "    \"\"\"Fake multi chip backend.\"\"\"\n",
     " \n",
     "    def __init__(self):\n",
-    "        \"\"\"Instantiate a new fake multi chip backend.\n",
-    " \n",
-    "        Args:\n",
-    "            distance (int): The heavy hex code distance to use for each chips'\n",
-    "                coupling map. This number **must** be odd. The distance relates\n",
-    "                to the number of qubits by:\n",
-    "                :math:`n = \\\\frac{5d^2 - 2d - 1}{2}` where :math:`n` is the\n",
-    "                number of qubits and :math:`d` is the ``distance``\n",
-    "            number_of_chips (int): The number of chips to have in the multichip backend\n",
-    "                each chip will be a heavy hex graph of ``distance`` code distance.\n",
-    "        \"\"\"\n",
+    "        \n",
     "        super().__init__(name=\"Fake MonarQ\")\n",
     "        # Create a heavy-hex graph using the rustworkx library, then instantiate a new target\n",
     "        self._graph = rx.PyGraph()\n",
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,211 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\ops\\op_math\\controlled_ops.py:1103: UserWarning: The control_wires keyword for MultiControlledX is deprecated, and will be removed soon. Use wires = (*control_wires, target_wire) instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.7853981633974482) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[2], q[3];\n",
-      "z q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.7853981633974483) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[2], q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "z q[3];\n",
-      "cz q[1], q[2];\n",
-      "tdg q[2];\n",
-      "sx q[2];\n",
-      "p(2.356194490192344) q[2];\n",
-      "sx q[2];\n",
-      "cz q[0], q[2];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(3.9269908169872414) q[2];\n",
-      "sx q[2];\n",
-      "cz q[1], q[2];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(2.356194490192344) q[2];\n",
-      "sx q[2];\n",
-      "cz q[0], q[2];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(3.9269908169872414) q[2];\n",
-      "tdg q[1];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "p(2.356194490192344) q[1];\n",
-      "sx q[2];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.7853981633974482) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[2], q[3];\n",
-      "z q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.7853981633974483) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[2], q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "z q[3];\n",
-      "cz q[1], q[2];\n",
-      "p(2.356194490192344) q[2];\n",
-      "sx q[2];\n",
-      "p(2.356194490192344) q[2];\n",
-      "sx q[2];\n",
-      "cz q[0], q[2];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(3.9269908169872414) q[2];\n",
-      "sx q[2];\n",
-      "cz q[1], q[2];\n",
-      "p(3.9269908169872414) q[1];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(2.356194490192344) q[2];\n",
-      "sx q[2];\n",
-      "cz q[0], q[2];\n",
-      "z q[2];\n",
-      "sx q[2];\n",
-      "p(3.9269908169872414) q[2];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "p(2.356194490192344) q[1];\n",
-      "sx q[2];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.3926990816987241) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[1], q[3];\n",
-      "z q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(1.1780972450961729) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[1], q[3];\n",
-      "p(3.5342917352885173) q[1];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "z q[3];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.3926990816987241) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[1], q[3];\n",
-      "z q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(1.1780972450961729) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[1], q[3];\n",
-      "p(2.7488935718910685) q[1];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "z q[3];\n",
-      "sx q[1];\n",
-      "cz q[0], q[1];\n",
-      "z q[1];\n",
-      "sx q[1];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(0.3926990816987241) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[0], q[3];\n",
-      "z q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "p(1.1780972450961729) q[3];\n",
-      "s q[3];\n",
-      "sx q[3];\n",
-      "s q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "cz q[0], q[3];\n",
-      "z q[3];\n",
-      "sx q[3];\n",
-      "defaultdict(<class 'int'>, {'Z90': 40, 'X90': 63, 'PhaseShift': 24, 'PauliZ': 36, 'CZ': 24, 'TDagger': 2})\n"
+      "defaultdict(<class 'int'>, {'Z90': 40, 'X90': 63, 'PhaseShift': 24, 'PauliZ': 36, 'CZ': 24})\n"
      ]
     }
    ],
@@ -382,7 +175,7 @@
     "\n",
     "node = qml.QNode(lambda : arbitrary_circuit(tape, qml.probs), default_dev)\n",
     "node()\n",
-    "print(to_qasm(tape))\n",
+    "# print(to_qasm(tape))\n",
     "specs = qml.specs(node)()\n",
     "print(specs[\"resources\"].gate_types)\n",
     "\n"
