change transpiler name to preprocessing

--- a/doc/transpiler.ipynb
+++ b/doc/transpiler.ipynb
@@ -31,19 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'000': 373, '001': 39, '010': 81, '011': 63, '100': 64, '101': 34, '110': 96, '111': 250}\n"
+      "{'000': 357, '001': 37, '010': 71, '011': 57, '100': 77, '101': 36, '110': 99, '111': 266}\n"
      ]
     }
    ],
    "source": [
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\")\n",
+    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client=client) \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "[H(0), CNOT(wires=[0, 1])]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "[X90(wires=[0]), X90(wires=[4]), Z(4), CZ(wires=[0, 4]), X90(wires=[4])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
