--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_snowflurry.transpiler.config import MonarqDefaultConfig, TranspilerConfig\n",
-    "from pennylane_snowflurry.transpiler.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
+    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, ProcessingConfig\n",
+    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,10 +110,10 @@
     "default_config = MonarqDefaultConfig()\n",
     "\n",
     "# This is an equivalent config, built up by hand using the TranspilerConfig base class\n",
-    "default_config = TranspilerConfig(base_decomp, placement, routing, optimization, native_decomp)\n",
+    "default_config = ProcessingConfig(base_decomp, placement, routing, optimization, native_decomp)\n",
     "\n",
     "# Say you are confident that your circuit is well placed and routed, you can skip those steps by creating a custom config, and not using placement / routing steps\n",
-    "custom_config = TranspilerConfig(base_decomp, optimization, native_decomp)"
+    "custom_config = ProcessingConfig(base_decomp, optimization, native_decomp)"
    ]
   },
   {
@@ -125,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_client = MonarqClient(\"your_host_here\", \"your_user_here\", \"your_access_token_here\", \"your_project_name_here\") \n",
     "\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, behaviour_config=custom_config)"
+    "dev = qml.device(\"monarq.default\", client=my_client, processing_config=custom_config)"
    ]
   },
   {
@@ -161,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "placement_no_benchmark = ASTAR(use_benchmark = False)\n",
     "routing_no_benchmark = Swaps(use_benchmark = False)\n",
     "\n",
-    "config_no_benchmark = TranspilerConfig(base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
+    "config_no_benchmark = ProcessingConfig(base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
    ]
   }
  ],
