--- a/doc/using_custom_steps.ipynb
+++ b/doc/using_custom_steps.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_snowflurry.transpiler.config import MonarqDefaultConfig\n",
-    "from pennylane_snowflurry.transpiler.steps import ReadoutErrorMitigation\n",
+    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig\n",
+    "from pennylane_snowflurry.processing.steps import ReadoutErrorMitigation\n",
     "\n",
     "readout_error_mitigation = ReadoutErrorMitigation()\n",
     "\n",
@@ -45,11 +45,11 @@
    "outputs": [],
    "source": [
     "# abstract steps + empty config\n",
-    "from pennylane_snowflurry.transpiler.interfaces import PreProcStep, PostProcStep\n",
-    "from pennylane_snowflurry.transpiler.config import TranspilerConfig\n",
+    "from pennylane_snowflurry.processing.interfaces import PreProcStep, PostProcStep\n",
+    "from pennylane_snowflurry.processing.config import ProcessingConfig\n",
     "\n",
     "# default steps\n",
-    "from pennylane_snowflurry.transpiler.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
+    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "# this custom config will print the circuit, transpile, print the transpiled circuit \n",
     "# and then print the unmitigated results, followed by the mitigated results.\n",
-    "my_config = TranspilerConfig(PrintCircuit(),\n",
+    "my_config = ProcessingConfig(PrintCircuit(),\n",
     "                             CliffordTDecomposition(), \n",
     "                             ASTAR(),\n",
     "                             Swaps(),\n",
