added doc and preset configs

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,10 @@
     }
    ],
    "source": [
+    "# this line imports the pennylane library. It contains everything necessary for quantum programming\n",
     "import pennylane as qml\n",
+    "\n",
+    "# this line imports the client class which is required for authenticating with MonarQ\n",
     "from pennylane_snowflurry.API.client import MonarqClient"
    ]
   },
@@ -67,18 +70,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. create a device using a client (TODO : faire un url vers un autre fichier pour le client)"
+    "1. create a device using a [client](using_client.ipynb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change the values here for your credentials\n",
+    "# This is how you create a client. Change the values in the parentheses for your credentials\n",
     "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\") \n",
     "\n",
+    "# This is how you create a device for communicating with MonarQ. \n",
     "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)"
    ]
   },
@@ -91,17 +95,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ──H─╭●─┤  Counts\n",
+      "1: ────╰X─┤  Counts\n"
+     ]
+    }
+   ],
    "source": [
+    "# this line indicates that the function underneath is a quantum function (qnode)\n",
     "@qml.qnode(dev)\n",
+    "# this is the name of your quantum function. It will be used later for executing your circuit\n",
     "def circuit():\n",
+    "    # this is a Hadamard gate. it creates superpoition.\n",
     "    qml.Hadamard(0)\n",
-    "    qml.CNOT([0, 1])\n",
-    "    qml.CNOT([1, 2])\n",
+    "    # this is a CNOT gate. it connects qubits 0 and 1. \n",
+    "    qml.CNOT([0, 1]) \n",
     "    \n",
-    "    return qml.counts()"
+    "    return qml.counts()\n",
+    "\n",
+    "# this wil show you what your circuit looks like\n",
+    "print(qml.draw(circuit)())"
    ]
   },
   {
@@ -113,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +144,21 @@
     }
    ],
    "source": [
+    "# this line runs the circuit and returns the results in the \"results\" variable\n",
     "results = circuit()\n",
+    "# this line shows the results in a dictionary. \n",
     "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## more information \n",
+    "\n",
+    "- [processor configs](using_configurations.ipynb)\n",
+    "- [the transpiler](using_transpiler.ipynb)\n",
+    "- [custom processing steps](using_custom_steps.ipynb)"
    ]
   }
  ],
