--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -138,6 +138,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are a set of preset configurations that you can use. Each corresponds to a typical use case that are often met. Here are some of them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, MonarqDefaultConfigNoBenchmark, NoPlaceNoRouteConfig, EmptyConfig\n",
+    "\n",
+    "# this is the preset that is used by default when you dont set a config manually\n",
+    "my_config = MonarqDefaultConfig()\n",
+    "\n",
+    "# this preset does the same thing as the default one, without the benchmarking acceptance tests in the placement and routing step\n",
+    "my_config = MonarqDefaultConfigNoBenchmark()\n",
+    "\n",
+    "# this preset skips the placement and routing part. Could be useful if you want to choose machine qubits and couplers manually\n",
+    "my_config = NoPlaceNoRouteConfig()\n",
+    "\n",
+    "# this preset does nothing. It can be used if your circuit is manually transpiled. \n",
+    "# Make sure your wires respect MonarQ's topology and that your gates are native to MonarQ.\n",
+    "my_config = EmptyConfig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "PS. You can set the placement and routing steps not to use benchmarking if you want to. \n",
     "\n",
     "To do so, just set ```use_benchmark``` to ```False``` in the MonarqDefaultConfig's constructor"
