warning message about transpiling "a la mitaine"

--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -199,6 +199,24 @@
     "\n",
     "config_no_benchmark = ProcessingConfig(base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though there may be scenarios where it is beneficial to bypass the transpiling capabilites of the plugin, it is strongly recommended to stick to the default configuration. You don't have to pass any configuration to the device to use the default preset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = client)"
+   ]
   }
  ],
  "metadata": {
