remove debug prints

--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can change the behaviour of the transpiler by passing a MonarqConfig object to the device. Tread carefully while using this feature because it could lead to your circuit not being run.\n",
+    "You can change the behaviour of the transpiler by passing a config object to the device. Tread carefully while using this feature because it could lead to your circuit not being run.\n",
     "\n",
     "Here's how to do it :\n"
    ]
