--- a/pennylane_snowflurry/jupyter/julia_test.ipynb
+++ b/pennylane_snowflurry/jupyter/julia_test.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -379,27 +379,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Dict(\"1\" => 45, \"0\" => 955), 2186)\n"
+      "(Dict(\"1\" => 675, \"0\" => 325), 2275)\n"
      ]
     }
    ],
    "source": [
     "shot_count = 1000\n",
     "push!(c_phasehift, readout(1, 1))\n",
-    "result = run_job(qpu, c, shot_count)\n",
+    "result = run_job(qpu, c_phasehift, shot_count)\n",
     "println(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -427,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Dict(\"1\" => 733, \"0\" => 267), 2232)\n"
+      "(Dict(\"1\" => 664, \"0\" => 336), 2229)\n"
      ]
     }
    ],
