update doc + put slowly changing nw ops in cache

--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "The default behaviour of MonarqDevice's transpiler goes as such :\n",
     "\n",
-    "1. Decompose 3+ qubits gates and non-standard gates to a subset that is easier to optimize (clifford-t gates)\n",
+    "1. Decompose measures if they are not in the computational basis\n",
+    "2. Decompose 3+ qubits gates and non-standard gates to a subset that is easier to optimize (clifford-t gates)\n",
     "2. Map the circuit's wires to the machines qubits by using the circuit's and machine's connectivity graphs\n",
     "3. If any 2+ qubit gates are not connected in given mapping, connect them using swaps\n",
     "4. Optimize the circuit (commute gates, merge rotations, remove inverses and trivial gates)\n",
