--- a/doc/using_transpiler.ipynb
+++ b/doc/using_transpiler.ipynb
@@ -64,11 +64,12 @@
    "metadata": {},
    "source": [
     "The usual behaviour of the transpiler is the following : \n",
-    "1. decompose the circuit to the clifford + T gate set\n",
-    "2. map the circuit to the machine's topology using a pathfinding heuristic\n",
-    "3. route the unconnected 2 qubit gates using swaps\n",
-    "4. optimize by decomposing iteratively to RX, RZ and CZ, commuting, merging and cancelling inverses and trivial gates\n",
-    "5. decomposing to MonarQ's native gate set"
+    "1. decompose the measures if they are not in the [computational basis](https://docs.pennylane.ai/en/stable/introduction/measurements.html)\n",
+    "2. decompose the circuit to the clifford + T gate set\n",
+    "3. map the circuit to the machine's topology using a pathfinding heuristic\n",
+    "4. route the unconnected 2 qubit gates using swaps\n",
+    "5. optimize by decomposing iteratively to RX, RZ and CZ, commuting, merging and cancelling inverses and trivial gates\n",
+    "6. decomposing to MonarQ's native gate set"
    ]
   },
   {
