--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -70,19 +70,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create a device using a [client](using_client.ipynb)"
+    "1. create a [client](using_client.ipynb) for your device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is how you create a client. Change the values in the parentheses for your credentials\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\") \n",
+    "# project is optional. It will be set to default if you don't specify it\n",
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. create a device using your client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you dont set any wires or shots, MonarQ will determine the wires based on your circuit, and will do one shot. \n",
+    "dev = qml.device(\"monarq.default\", client=my_client)\n",
     "\n",
-    "# This is how you create a device for communicating with MonarQ. \n",
+    "# You can set the wire amount explicitely\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, wires=3) # this will set wires = [0, 1, 2]. ie 3 wires\n",
+    "\n",
+    "# You can set any amount of shots up to 1000\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=512)\n",
+    "\n",
+    "# You can also set which wires you want to act on explicitely\n",
     "dev = qml.device(\"monarq.default\", client=my_client, wires=[0, 1, 2], shots=1000)"
    ]
   },
@@ -95,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,11 +136,16 @@
     "@qml.qnode(dev)\n",
     "# this is the name of your quantum function. It will be used later for executing your circuit\n",
     "def circuit():\n",
-    "    # this is a Hadamard gate. it creates superpoition.\n",
-    "    qml.Hadamard(0)\n",
+    "    # this is a Hadamard gate. it creates superposition.\n",
+    "    qml.Hadamard(wires=0)\n",
     "    # this is a CNOT gate. it connects qubits 0 and 1. \n",
-    "    qml.CNOT([0, 1]) \n",
+    "    qml.CNOT(wires=[0, 1]) \n",
+    "    # this is also a CNOT gate, but it acts on qubits 1 and 2\n",
+    "    qml.CNOT([1, 2])\n",
     "    \n",
+    "    # this will measure every wire from the circuit (3 wires in this case). \n",
+    "    # You can also set which wires you want to measure using the wires argument\n",
+    "    # return qml.counts(wires=[0, 1]) # will measure wires 0 and 1\n",
     "    return qml.counts()\n",
     "\n",
     "# this wil show you what your circuit looks like\n",
@@ -156,9 +185,11 @@
    "source": [
     "## more information \n",
     "\n",
+    "- [clients](using_client.ipynb)\n",
     "- [processor configs](using_configurations.ipynb)\n",
     "- [the transpiler](using_transpiler.ipynb)\n",
-    "- [custom processing steps](using_custom_steps.ipynb)"
+    "- [custom processing steps](using_custom_steps.ipynb)\n",
+    "- [custom gates](using_custom_gates.ipynb)"
    ]
   }
  ],
